[gd_scene load_steps=12 format=3 uid="uid://ckgj6t8n3a42n"]

[ext_resource type="Script" uid="uid://ckfq00pgafqx1" path="res://scripts/arcade.gd" id="1_658re"]
[ext_resource type="Texture2D" uid="uid://bxqpj5cy1mx1s" path="res://imagen/fondo.png" id="2_ygsfv"]
[ext_resource type="Texture2D" uid="uid://csqwttjca3scs" path="res://imagen/SoccerBall.png" id="3_4ltp0"]
[ext_resource type="Texture2D" uid="uid://ck5edn861aamb" path="res://imagen/0.bmp" id="4_fn0ij"]
[ext_resource type="Texture2D" uid="uid://df1f0g6f1fpbm" path="res://imagen/GOL.png" id="5_4jfan"]
[ext_resource type="Texture2D" uid="uid://dhx7rp28kot7e" path="res://imagen/ATAJO.png" id="6_ygsfv"]
[ext_resource type="Texture2D" uid="uid://b8hx6iyfgxex3" path="res://imagen/arqeuro1 (1).png" id="7_2evy2"]
[ext_resource type="Texture2D" uid="uid://skbovwn6qwfo" path="res://imagen/arquero3.png" id="8_8552t"]
[ext_resource type="AudioStream" uid="uid://c7unqn4aiwqtv" path="res://imagen/Grito de Gol - Hinchada. (Audio).mp3" id="9_8552t"]
[ext_resource type="AudioStream" uid="uid://contqj2w0oql6" path="res://imagen/Abucheos - (audio).mp3" id="10_eadtj"]

[sub_resource type="LabelSettings" id="LabelSettings_4jfan"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="arcade" type="Node2D"]
script = ExtResource("1_658re")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1151.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ygsfv")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="animacion" type="TextureRect" parent="."]
visible = false
offset_left = 389.0
offset_top = 15.0
offset_right = 676.0
offset_bottom = 164.0
texture = ExtResource("5_4jfan")
expand_mode = 1

[node name="atajo" type="TextureRect" parent="."]
visible = false
offset_left = 442.0
offset_top = 16.0
offset_right = 628.0
offset_bottom = 149.0
texture = ExtResource("6_ygsfv")
expand_mode = 1

[node name="mostrarPuntos" type="Label" parent="."]
offset_left = 35.0
offset_top = 16.0
offset_right = 103.0
offset_bottom = 71.0
text = "000"
label_settings = SubResource("LabelSettings_4jfan")

[node name="GridContainer" type="GridContainer" parent="."]
show_behind_parent = true
offset_left = 202.0
offset_top = 184.0
offset_right = 896.0
offset_bottom = 495.0
columns = 3

[node name="arribaIzquierda" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="arribaMedio" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="arribaDerecha" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="abajoIzquierda" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="abajoMedio" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="abajoDeecha" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="vidas" type="GridContainer" parent="."]
offset_left = 1012.0
offset_top = 24.0
offset_right = 1128.0
offset_bottom = 57.0
columns = 3

[node name="corazon1" type="TextureRect" parent="vidas"]
layout_mode = 2
texture = ExtResource("4_fn0ij")

[node name="corazon2" type="TextureRect" parent="vidas"]
layout_mode = 2
texture = ExtResource("4_fn0ij")

[node name="corazon3" type="TextureRect" parent="vidas"]
layout_mode = 2
texture = ExtResource("4_fn0ij")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="arqueroEstatico" type="Sprite2D" parent="."]
position = Vector2(543, 374)
scale = Vector2(0.45, 0.45)
texture = ExtResource("7_2evy2")

[node name="arqueroMovDer" type="Sprite2D" parent="."]
visible = false
position = Vector2(784, 416)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_8552t")

[node name="ball" type="Sprite2D" parent="."]
position = Vector2(547, 557)
scale = Vector2(1.35, 1.148)
texture = ExtResource("3_4ltp0")

[node name="abucheos" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_eadtj")

[node name="gol" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8552t")

[connection signal="pressed" from="GridContainer/arribaIzquierda" to="." method="_on_arriba_izquierda_pressed"]
[connection signal="pressed" from="GridContainer/arribaMedio" to="." method="_on_arriba_medio_pressed"]
[connection signal="pressed" from="GridContainer/arribaDerecha" to="." method="_on_arriba_derecha_pressed"]
[connection signal="pressed" from="GridContainer/abajoIzquierda" to="." method="_on_abajo_izquierda_pressed"]
[connection signal="pressed" from="GridContainer/abajoMedio" to="." method="_on_abajo_medio_pressed"]
[connection signal="pressed" from="GridContainer/abajoDeecha" to="." method="_on_abajo_deecha_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
